[tool.poetry]
name = "calibration"
version = "0.1.0"
description = ""
authors = ["caramance"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.8.0.76"
matplotlib = "^3.7.2"
open3d = "0.16.0"
tqdm = "4.66.1"
numba = "0.57.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
